vertical align now fixes

--- a/extension/css/smart_extensions_style.css
+++ b/extension/css/smart_extensions_style.css
@@ -165,6 +165,7 @@ html[right="false"] .html5-video-container .html5-main-video  {
 	width: 100% !important;
 	height: 100% !important;
 	left: 0 !important;
+	top: 0 !important;
 }
 
 html[right="false"] #playlist > .ytd-playlist-panel-renderer {
